--- a/project/AEapp/templates/AEapp/header.html
+++ b/project/AEapp/templates/AEapp/header.html
@@ -9,10 +9,10 @@
     <p style="color: whitesmoke;">Versão de teste</p>
     <nav class="urls">
         <button class="headerButton">
-        <a href="/sobre">Sobre o nosso projeto</a>
+        <a href="/sobre/">Sobre o nosso projeto</a>
         </button>
          <button class="headerButton">
-        <a href="/contato">Contato</a>
+        <a href="/contato/">Contato</a>
         </button>
     </nav>
 </header>
