--- a/project/AEapp/templates/AEapp/header.html
+++ b/project/AEapp/templates/AEapp/header.html
@@ -1,7 +1,7 @@
 {% load static %}
-<link rel="stylesheet" href="{% static 'styles.css' %}">
+<link rel="stylesheet" href="{% static 'site_styles.css' %}">
 <header >
-    <img src="{% static 'images/logo-saboaria.png' %}" style="height: 260px; float: right;">
+    <img src="{% static 'images/logo-saboaria.png' %}" style="height: 330px; float: right;">
 
     <a href="/"style="text-decoration: none; color: black;">
     <h1 >AROMA & ESSÊNCIA</h1>
