--- a/project/AEapp/static/site_styles.css
+++ b/project/AEapp/static/site_styles.css
@@ -1,6 +1,6 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@500;700&family=Open+Sans:wght@400;600&display=swap');
-
+/* why not working */
 body {
   margin: 0;
   background-color: #f6f2e6;
